// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuestActions Should match snapshot with data 1`] = `
<div>
   
  <button
    class="sc-bdfBQB igQAuX"
    data-testid="open-stake-tokens-modal-btn"
  >
    join
  </button>
   
</div>
`;

exports[`GuestActions Should match snapshot without data 1`] = `
<div>
   
  <button
    class="sc-bdfBQB igQAuX"
  >
    connectWallet
  </button>
   
</div>
`;
